# trading-signals

./: .dependency-cruiser.cjs  .dependency-cruiser.json  .eslintrc.json  .gitignore  .huskyrc.json  .lintstagedrc.json  .npmrc  .prettierrc.json  CHANGELOG.md  CLAUDE.md  Procfile  README.md  eslint.config.base.mjs  eslint.config.base.ts  eslint.config.mjs  eslint.config.ts  jest.config.json  lefthook.yml  lerna.json  nyc.config.coverage.js  nyc.config.coverage.json  nyc.config.js  nyc.config.json  package-lock.json  package.json  pnpm-lock.yaml  render.yaml  tsconfig.base.json  tsconfig.build.json  tsconfig.json  tsconfig.lib.json  tsup.config.ts  typedoc.json  vitest.config.base.ts  vitest.config.ts
.claude/agents/: DocsExplorer.md
.claude/rules/: comments-add-intent-not-implementation.md  docs-e2e.md  no-non-null-assertion-on-getResult.md  vitest-mocking.md
.dependabot/: config.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  release.yml
.github/workflows/: Bennet1996  (+10 more)
docs/: README.md  _sidebar.md  hierarchy.html  index.html  modules.html  modules.md  package-lock.json  package.json
native/: Cargo.toml  index.d.ts  index.js  package.json  trading-signals-napi-rs.darwin-x64.node
native/npm/darwin-x64/: README.md  package.json
native/npm/linux-x64-gnu/: README.md  package.json
native/npm/win32-x64-msvc/: README.md  package.json
native/src/: dema.rs  ema.rs  lib.rs  macd.rs  utils.rs
src/: IQR.test.ts  IQR.ts  Indicator.test.ts  Indicator.ts  MyClass.test.ts  MyClass.ts  demo.ts  index.test.ts  index.ts
(+462 files in other folders)
